--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,10 @@
 <h1>Sample App</h1>
 <p>
   This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+  JAMES THE FINISHER TOUCH
   sample application.
 </p>
+
 <%= link_to "Sign up now!", '#', :class => "signup_button round" %>
 
 
