link to facebook acct/modifiy css

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://www.facebook.com/profile.php?id=1175686295">Facebook</a></li>
+      <li><a href="http://www.facebook.com/groups/166707206706278/">Facebook</a></li>
       <li><a href="http://twitter.com/#!/delacruz_james">Twitter</a></li>
     </ul>
   </nav>
