--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
- background: #e6e6ea;
+ background: #C11B17;
 
 }
 header {
@@ -80,7 +80,7 @@ a.signup_button {
   text-align: center;
   width: 190px;
   color: #fff;
-  background: #006400;
+  background: #41383C;
   font-size: 150%;
   font-weight: bold;
   padding: 20px;
