--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
   sample application.
 </p>
 
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+<%= link_to "Register Now!", signup_path, :class => "signup_button round" %>
 
 
