--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <%= image_tag("james_logo.jpg", :alt => "Sample App", :class => "round") %>
+  <%= image_tag("images.jpeg", :alt => "Sample App", :class => "round") %>
      <nav class="round">
         <ul>
           <li><%= link_to "Home", root_path %></li>
