edit controller pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,6 @@
-<h1>Sample App</h1>
+<h1>Home Pages</h1>
 <p>
-  This is the home page for the
-  JAMES THE FINISHER TOUCH
-  sample application.
+  app/view/pages/home
 </p>
 
 <%= link_to "Register Now!", signup_path, :class => "signup_button round" %>
