--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= @title %></title>
+    <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes'  %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
   </head>
