--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
-<h1>About Pages</h1>
+<h3><font size="6" face="Georgia, Arial" color="maroon">I</font>NTERNATIONAL <font size="6" face="Georgia, Arial" color="maroon">K</font>YOKUSHIN KARATE<font size="6" face="Georgia, Arial" color="maroon">O</font>RGANIZATION</h3>
 <p>
-  app/views/pages/about
+The International Karate Organization and the Kyokushinkaikan follow the Karate way of building character and training the mind and body to contribute to society, based on Sosai Mas Oyama's Kyokushin spirit "Keep your head low (modesty), eyes high (ambition), mouth shut (serenity); base yourself on filial piety and benefit others." We in Kyokushin Karate-Do do not promote or practice discrimination or prejudice based on ethnicity, race, nationality, politics, philosophy, religion, sex or age and recognize that everyone has the same rights. Our greatest pursuit is to reach for the goal of international friendship and world peace.
 </p>
-
