--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,13 @@
-<h1>Contact Pages</h1>
+<h3><font size="6" face="Georgia"color="maroon">K</font>YOKUSHIN HONBU PHILIPPINES</h3>
+
 <p>
- app/views/pages/contact
+  <b>
+    # 2B N. Domingo Street Brgy. Progresso, San Juan City<br />
+    Philippines 1500 727-2727, 09177272008<br />
+    Website: www.kyokushin.com.ph <br />
+    Email: <a href="http://www.kyokushin.com.ph">Info@kyokushin.com.ph</a>
+  </b>
 </p>
+
+
 
