--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer>
   <nav class="round">
     <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "About Us", about_path %></li>
+      <li><%= link_to "Contact Us", contact_path %></li>
       <li><a href="http://www.facebook.com/groups/166707206706278/">Facebook</a></li>
       <li><a href="http://twitter.com/#!/delacruz_james">Twitter</a></li>
     </ul>
