--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
      <nav class="round">
         <ul>
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Help", help_path %></li>
+          <li><%= link_to "News", help_path %></li>
           <li><%= link_to "All Members", '#' %></li>
          </ul>
       </nav>
