--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
         <ul>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "News", help_path %></li>
-          <li><%= link_to "All Members", '#' %></li>
+          <li><%= link_to "All Members", memberships_path %></li>
          </ul>
       </nav>
 </header>
