--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Enter New Member</h1>
+<h3><font size="6" face="Georgia"color="maroon">K</font>YOKUSHIN HONBU PHILIPPINES</h3>
 
 <%= render 'form' %>
 
