deleted user_controller/home/show and modify index/new/home

--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,5 +1,5 @@
 <h3><font size="6" face="Georgia"color="maroon">K</font>YOKUSHIN HONBU PHILIPPINES</h3>
-
+<h5>Please Register Once u will recieve Notice after 7days</h5>
 <%= render 'form' %>
 
 <%= link_to 'Back', memberships_path %>
