--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
 <h3><font size="6" face="Georgia"color="maroon">K</font>YOKUSHIN HONBU PHILIPPINES</h3>
+<h5>One time Registration Only, you will recieve a Notice after 7days of period</h5>
 <%= link_to "Register Now!", signup_path, :class => "signup_button round" %>
-
 
