--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -2,24 +2,26 @@
 
 <table>
   <tr>
+    <th>ID</th>
     <th>Full name</th>
     
     <th>Dojo</th>
     <th>Rank</th>
     
-    <th>Date Started</th>
+    <th>Gender</th>
     <th></th>
     <th></th>
   </tr>
 
 <% @memberships.each do |membership| %>
   <tr>
+    <td><%= membership.id %></td>
     <td><%= membership.full_name %></td>
    
     <td><%= membership.dojo %></td>
     <td><%= membership.rank %></td>
     
-    <td><%= membership.date_started %></td>
+    <td><%= membership.gender %></td>
  
     
    
