added log-in link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "News", help_path %></li>
           <li><%= link_to "All Members", memberships_path %></li>
+          <li><%= link_to "Log In", '#' %></li>
          </ul>
       </nav>
 </header>
